tests/compile_fail/handle_scope_escape_lifetime.stderr
error[E0597]: `scope2` does not live long enough
  --> $DIR/handle_scope_escape_lifetime.rs:9:43
   |
7  |   let _local = {
   |       ------ borrow later stored here
8  |     let mut scope2 = v8::HandleScope::new(&mut scope1);
9  |     let mut scope3 = v8::HandleScope::new(&mut scope2);
   |                                           ^^^^^^^^^^^ borrowed value does not live long enough
...
13 |   };
   |   - `scope2` dropped here while still borrowed
